[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build

[metadata]
# The "package display name" is a name for the package that may differ
# from the the name with which it is imported in Python.  If you leave
# it blank, "package_name" will be used.
package_display_name =
package_name = packagename
description = Astropy affiliated package
long_description = This is a package for doing X that relies on astropy
author = John Doe
author_email = johndoe@nowhere.com
license = BSD
url = http://astropy.org/
edit_on_github = False
github_project = astropy/astropy